<resources>
    <string name="app_name">Setup Wizard</string>
    <string name="gn_sw_string_next">Next</string>
    <string name="gn_sw_string_jump">Skip</string>
    <string name="gn_sw_string_date_format">HH:mm yyyy.MM.dd EEEE</string>
    <string name="gn_sw_string_datetime_tab_format">yyyy-MM-dd</string>
    <string name="gn_sw_string_welcome">Welcome</string>
    <string name="gn_sw_string_amigoos">amigoOS</string>
    <string name="gn_sw_string_wifi_connect_btn">Connect</string>
    <string name="gn_sw_string_wificonnect">Connected</string>
    <string name="gn_sw_string_wifi_choiceview_text">Select WLAN</string>
    <string name="gn_sw_string_wifi_showpassword">Show password</string>
    <string name="gn_sw_string_wifi_not_connect">Can\'t connect wifi</string>
    <string name="gn_sw_strinf_wifi_net_hint">Kindly Reminder:In your use mobile phones,android system,DRM Protection storage content and Google Service will cause a little data flow which is can\'t avoid,it has been did strictly tested and will not affect your Operator tariff.</string>
    <string name="gn_sw_string_datetime_auto_get_time">Update time automatically in network</string>
    <string name="gn_sw_string_account_login_hint">You\'ve logged in.Please remember your account info.</string>
    <string name="gn_sw_string_account_get_warranty_btn">Get Warranty Card</string>
    <string name="gn_sw_string_account_register_btn">One key registration</string>
    <string name="gn_sw_string_account_registering_btn">Registering amigo account</string>
    <string name="gn_sw_string_account_already_registed">Existing logined account</string>
    <string name="gn_sw_string_account_register_send_mms_notice">Will send a verification message</string>
    <string name="gn_sw_string_account_ignore">Skip</string>
    <string name="gn_sw_string_account_login_title">Login account hint</string>
    <string name="gn_sw_string_account_login_content">You will can not enjoy gionee users\'services,are you sure to skip account login?</string>
    <string name="gn_sw_string_account_login_positive_button">sure</string>
    <string name="gn_sw_string_account_login_negative_button">cancel</string>
    <string name="gn_sw_string_account_registing_notice">Registration application has been sent,will notice you after succeed</string>
    <string name="gn_sw_string_register_account_not_ready">Gionee Account application is not ready, please install the latest one</string>
    <string name="gn_sw_string_sim_card_select_item">SIM card</string>
    <string name="gn_sw_string_register_notification_account">Account:</string>
    <string name="gn_sw_string_register_notification_password">Password:</string>
    <string name="gn_sw_string_register_account_fail">Registration fail</string>
    <string name="gn_sw_string_register_fail_account_exist">Phone number has been registered,please login directly</string>
    <string name="gn_sw_string_register_fail_network_error">Network is poor,registration fail,please try later</string>
    <string name="gn_sw_string_register_fail_network_disconnect">Network disconnected,registration fail, please check the network and try again</string>
    <string name="gn_sw_string_register_fail_no_send_sms">Because the SMS was not sent successfully,fail to register</string>
    <string name="gn_sw_string_register_fail_response_error">Registration fails,network abnormally response,please check the network and try again</string>
    <string name="gn_sw_string_register_fail_status_error">Registration fails,server is not normal</string>
    <string name="gn_sw_string_register_fail_http_code_error">Registration fails, server has wrong HTTP response code</string>
    <string name="gn_sw_string_register_fail_no_receive_sms">Server didn\'t receive the SMS,registration fails,please try again</string>
    <string name="gn_sw_string_register_fail_too_frequently">Registered too frequently, please try again later</string>
    <string name="gn_sw_string_notification_register_success">Congratulations,register successfully</string>
    <string name="gn_sw_string_notification_register_fail">Account didn\'t register successfully,please try again</string>
    <string name="gn_sw_string_gionee_service_register">You can enter the member center and continue to register</string>
    <string name="gn_sw_string_network_disconnect">Now there isn\'t the connnected network</string>
    <string name="gn_sw_string_register_no_sim_error">SIM card isn\'t detected,please insert and retry</string>
    <string name="gn_sw_string_register_sim_pin_puk_network_lock_error">SIM card pin/puk/network code was locked,please unlock and try again</string>
    <string name="gn_sw_string_register_airplane_error">Can\'t register in airplane mode,please close it and retry</string>
    <string name="gn_sw_string_register_sim_state_error">SIM card is abnormal</string>
    <string name="gn_sw_string_register_select_sim_card_title">Select SIM card</string>
    <string name="gn_sw_string_account_slide_text">Easily enjoy cloud services,amigo community,gamezone,and other services</string>
    <string name="gn_sw_string_account_slide_title_text">amigo account</string>
    <string name="gn_sw_string_account_slide_text_warranty">Login amigo account,fill account information,you will get 12 months warranty.</string>
    <string name="gn_sw_string_account_slide_title_text_warranty">Extend warranty</string>
    <string name="gn_sw_string_account_slide_text_2">Quickly backup contacts,SMS,call history.It is convenient and safe.Nerver lose</string>
    <string name="gn_sw_string_account_slide_title_text_2">Cloud storage</string>
    <string name="gn_sw_string_account_slide_text_3">Phone guard against theft.Locate remotely.Fast retrieve phone</string>
    <string name="gn_sw_string_account_slide_title_text_3">Phone guard against theft</string>
    <string name="gn_sw_string_account_slide_ignore_warranty">You will get 12 months warranty If you fill information completely in the member center.</string>
    <string name="gn_sw_string_complete_btn_text">Immediately experience</string>
    <string name="gn_sw_string_complete_logo_text_title">Congratulations</string>
    <string name="gn_sw_string_complete_logo_text_content">Complete to setup you phone\nplease enjoy amigo</string>
    <string name="gn_sw_string_user_feed">User experience program</string>
    <string name="gn_sw_string_complete_web_loading">Loading...</string>
    <string name="gn_sw_string_security_service">Security update services</string>
    <string name="gn_sw_string_user_text">We will record your use situation of product function,it will help us to improve our product and services.The entire process will follow the privacy policy.</string>
    <string name="gn_sw_string_system_notification">System notification</string>
    <string name="gn_sw_string_system_notification_text">In order to receive the notification of system timely, it will get the message automatically in WLAN or mobile net,so it needs the permission of read and write system file,the imei of the phone and the position, and it will cause a little data folw in WLAN or Mobile net.The entire process will follow the privacy policy.</string>
    <string name="gn_sw_string_system_upgrade">System Upgrade</string>
    <string name="gn_se_string_system_upgrade_text">In order to ensure the timely system update and system security,it will check and download the latest system update packages in WLAN and charging status,so it needs to connect the network and to read and write the external memory,it will cause some data folw in WLAN.The entire process will follow the privacy policy.</string>
    <string name="gn_sw_string_others">Terminal Manage Statement</string>
    <string name="gn_sw_string_others_text">In order to supply better service for you, your device will be send some info about your devices or your usage in WLAN or mobile net to your seclect operators. The operators promise that these infos will be analysed only to impove service quality or supply custom service and technology, these infos will not be revealed to the outside world as identifiable personal information.</string>
    <string name="gn_sw_string_complete_warranty">Extended warranty application has been successfully submitted\n application results in 6 hours after your user Center Locator</string>
    <string name="gn_sw_string_user_experience_title">User experience project</string>
    <string name="user_experience_note_1"> Gionee user experience improvement program </string>
    <string name="user_experience_note_2"> —You will support us in improving product and service </string>
    <string name="user_experience_note_3">1、Participating this program will not affect your application to our product and Service:\nParticipating this program will not disturb or stop your application (For example pop up window, email and tele survey etc).\nThe product and service quality will be the same no matter whether you take part in this program or not.\n </string>
    <string name="user_experience_note_4">2、The below message will be sent to us if you choose to participate this program:\nSystem information: Hardware and system platform data etc; Product application: Most frequent used application, Most popular features etc; Error and collapse data: Error description and frequency etc.\nUser experience improvement program will only collect Gionee relative product and service data.\nBut because some software might influence the application of Gionee product and service (For example software clash, safety leak etc ), we might collect the information of these software as well.\nWe respect your privacy, for more information, please refer our term of privacy policy.\nTo remind you, web traffic might cost as data deliver to server. Please be aware that we must stay control of the traffic cost.\n </string>
    <string name="user_experience_note_5">3、This program is completely anonymous:\nWe will not collect any notable personal data. The data we collect is anonymous and it will only be in used by our product team.\n </string>
    <string name="user_experience_note_6">4、This program is completely volunteer:\nYou are able to choose whether to participate or not when you do registration; Also, you can take part in or leave the program any time as you wish. Operation route: Gionee service or member center, enter into after sales service, click menu button or setting button, to turn on/off the user experience improvement program\nIf you would not like to participate this program or it is violate your company or organization’s strategy, please do not take part in this program.\n </string>
    <string name="user_experience_note_7">Privacy strategy\n Gionee Communication Equipment Ltd concentrate on the protection of user privacy.\nThe aim of this privacy strategy is to state that we might collect data when you visit or use Gionee mobile phone product and relative service, how would we use these data, whether will we share it to third party and your right of judging the application and revision of this information.\n </string>
    <string name="gn_sw_string_complete_btn_text1">开始使用</string>
    <string name="gn_sw_string_account_dialog_tip">在使用过程中需要获取以下权限:\n连接网络，读取/修改/发送信息，调用WLAN开关，读取外部存储数据\n是否继续使用?</string>
    <string name="account_dialog_title_accout_title">欢迎使用amigo账号</string>
    <string name="account_dialog_title_accout_cancle">退出</string>
    <string name="account_dialog_title_accout_submit">继续</string>
    <string name="welcom_user_gionee_phone">欢迎使用金立手机</string>
    <string name="welcom_user_gionee_phone_desc">科技 悦生活</string>
</resources>