<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gn_sw_main_background_color">

    <TextView
        android:id="@+id/gn_sw_layout_account_ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:padding="15dp"
        android:clickable="true"
        android:minHeight="16dp"
        android:minWidth="16dp"
        android:text="@string/gn_sw_string_account_ignore" />

    <Button
        android:id="@+id/gn_sw_layout_account_login_btn"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_above="@+id/gn_sw_layout_account_ignore"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/gn_white_btn"
        android:textColor="#ff666666"
        android:text="@string/gn_sw_string_account_already_registed" />

    <Button
        android:id="@+id/gn_sw_layout_account_register_btn"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/gn_green_btn"
        android:text="@string/gn_sw_string_account_register_btn"
        android:textColor="@color/gn_sw_layout_white_color"
        android:layout_above="@+id/gn_sw_layout_account_login_btn"/>

    <Button
        android:id="@+id/gn_sw_layout_account_get_warranty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gn_sw_layout_account_login_btn"
        android:layout_alignLeft="@+id/gn_sw_layout_account_login_btn"
        android:layout_alignRight="@+id/gn_sw_layout_account_login_btn"
        android:layout_alignTop="@+id/gn_sw_layout_account_login_btn"
        android:text="@string/gn_sw_string_account_get_warranty_btn"
        android:textColor="@color/gn_sw_layout_white_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/gn_regiter_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gn_sw_layout_account_register_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/gn_sw_string_account_register_send_mms_notice"
        android:textColor="@color/gn_sw_layout_content_textColor"
        android:textSize="12sp" />

    <com.gionee.setupwizard.widget.banner.BannerViewGroup
        android:id="@+id/gn_anim_account_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/gn_regiter_notification"
        android:layout_alignParentTop="true" />
    <!-- 指示灯 -->
    <LinearLayout
        android:id="@+id/gn_sw_layout_accout_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/gn_regiter_notification"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/gn_sw_layout_accout_progress_bar0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gn_feature_point_cur"/>
        <ImageView
            android:id="@+id/gn_sw_layout_accout_progress_bar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/gn_feature_point"/>
        <ImageView
            android:id="@+id/gn_sw_layout_accout_progress_bar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gn_feature_point"/>
    </LinearLayout>
</RelativeLayout>