<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gn_privacy_dialog_rl_cornor"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/account_dialog_title_accout_title"
            android:textColor="@color/gn_sw_layout_wifi_title_color"
            android:textSize="21sp"
            />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/privacy_tip"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="25dp"
               android:layout_marginBottom="20dp"
               android:paddingLeft="14dp"
               android:paddingRight="14dp"
               android:text="@string/gn_sw_string_account_dialog_tip"
               android:textColor="#333333"
               android:textSize="16sp"
               />
       </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gn_sw_layout_listview_divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F5F5F5"
            >

            <TextView
                android:id="@+id/dialog_cancle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/account_dialog_title_accout_cancle"
                android:textSize="16sp"
                android:textColor="@color/gn_sw_layout_account_register_account_hint"
                android:layout_marginRight="10dp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gn_sw_layout_listview_divider_color"/>

            <TextView
                android:id="@+id/dialog_submit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/account_dialog_title_accout_submit"
                android:textColor="@color/gn_sw_layout_wifi_title_color"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>