<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gn_sw_main_background_color"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gn_welcome_background"
        />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#EE9647"
            android:textSize="19sp"
            android:text="@string/welcom_user_gionee_phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#646464"
            android:text="@string/welcom_user_gionee_phone_desc"/>
    </LinearLayout>

    <Button
        android:id="@+id/welcom_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/gn_sw_ota_guide_button_marginBottom"
        android:layout_marginLeft="@dimen/gn_sw_ota_guide_button_margin"
        android:layout_marginRight="@dimen/gn_sw_ota_guide_button_margin"
        android:layout_marginTop="@dimen/gn_sw_ota_guide_button_marginTop"
        android:background="@drawable/gn_btn_welcome_ripple"
        android:text="@string/gn_sw_string_complete_btn_text1"
        android:textColor="@color/gn_sw_layout_white_color"
        android:textSize="@dimen/gn_sw_ota_guide_button_text_size" />

    <LinearLayout
        android:id="@+id/gn_sw_layout_ota_hotseat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcom_btn"
        android:layout_marginBottom="20dp"
        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
        android:orientation="horizontal" />


</RelativeLayout>